--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -6,7 +6,7 @@
                 <h3 class="my-heading">Welcome to Winner<span class="bg-main">Outdoor</span></h3>
                 <p class="myp-slider text-center">Where outdoor lovers unite and become better together</p>
                 <p class="myp text-center">SHARE YOUR MEMORIES   |   CONNECT WITH OTHERS   |   MAKE NEW FRIENDS</p>
-                <a class="btn btn-primary btn-join" href="#">JOIN THE COMMUNITY</a>
+                <a class="btn btn-primary btn-join" href="/users/sign_up">JOIN THE COMMUNITY</a>
 
             </div>
             <div class="col-md-12 text-center mt-5">
