--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,5 @@
 <!-- Forgot password form -->
-<div class="main top-content">
+<div class="main top-content-registration">
     <section class="signup">
         <div class="container container-registration">
             <div class="signup-content">
